--- a/penguin.html
+++ b/penguin.html
@@ -28,8 +28,9 @@
         <div class="beak bottom"></div>
       </div>
       <div class="shirt">
-        <div>❤️</div>
-        <p>I NY</p>
+        <div>I'm fun 🥳</div>
+        <p>Hire Me</p>
+
       </div> 
       <div class="penguin-body">
         <div class="arm left"></div>
