--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="beak bottom"></div>
       </div>
       <div class="shirt">
-        <div>I'm fun 🥳</div>
-        <p>Hire Me</p>
+        <div>Hello 🥳</div>
+        
 
       </div> 
       <div class="penguin-body">
